added fonts for HeadingReportComponent