@@ -1,4 +1,34 @@
-package org.thingsboard.server.report.util;
+/**
+ * ThingsBoard, Inc. ("COMPANY") CONFIDENTIAL
+ *
+ * Copyright © 2016-2025 ThingsBoard, Inc. All Rights Reserved.
+ *
+ * NOTICE: All information contained herein is, and remains
+ * the property of ThingsBoard, Inc. and its suppliers,
+ * if any.  The intellectual and technical concepts contained
+ * herein are proprietary to ThingsBoard, Inc.
+ * and its suppliers and may be covered by U.S. and Foreign Patents,
+ * patents in process, and are protected by trade secret or copyright law.
+ *
+ * Dissemination of this information or reproduction of this material is strictly forbidden
+ * unless prior written permission is obtained from COMPANY.
+ *
+ * Access to the source code contained herein is hereby forbidden to anyone except current COMPANY employees,
+ * managers or contractors who have executed Confidentiality and Non-disclosure agreements
+ * explicitly covering such access.
+ *
+ * The copyright notice above does not evidence any actual or intended publication
+ * or disclosure  of  this source code, which includes
+ * information that is confidential and/or proprietary, and is a trade secret, of  COMPANY.
+ * ANY REPRODUCTION, MODIFICATION, DISTRIBUTION, PUBLIC  PERFORMANCE,
+ * OR PUBLIC DISPLAY OF OR THROUGH USE  OF THIS  SOURCE CODE  WITHOUT
+ * THE EXPRESS WRITTEN CONSENT OF COMPANY IS STRICTLY PROHIBITED,
+ * AND IN VIOLATION OF APPLICABLE LAWS AND INTERNATIONAL TREATIES.
+ * THE RECEIPT OR POSSESSION OF THIS SOURCE CODE AND/OR RELATED INFORMATION
+ * DOES NOT CONVEY OR IMPLY ANY RIGHTS TO REPRODUCE, DISCLOSE OR DISTRIBUTE ITS CONTENTS,
+ * OR TO MANUFACTURE, USE, OR SELL ANYTHING THAT IT  MAY DESCRIBE, IN WHOLE OR IN PART.
+ */
+package org.thingsboard.server.report.renderer;
 
 import net.sf.jasperreports.engine.design.JRDesignBand;
 import net.sf.jasperreports.engine.design.JRDesignSection;
@@ -7,25 +37,26 @@ import net.sf.jasperreports.engine.design.JasperDesign;
 import net.sf.jasperreports.engine.type.ModeEnum;
 import org.springframework.stereotype.Component;
 import org.thingsboard.server.common.data.report.configuration.DataKey;
-import org.thingsboard.server.common.data.report.configuration.components.EntityTableComponent;
+import org.thingsboard.server.common.data.report.configuration.components.AlarmTableComponent;
 import org.thingsboard.server.common.data.report.configuration.components.ReportComponent;
 import org.thingsboard.server.common.data.report.configuration.components.ReportComponentType;
+import org.thingsboard.server.report.context.ReportLayoutContext;
 
 import java.awt.*;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.thingsboard.server.report.util.JasperReportUtils.createTextField;
-import static org.thingsboard.server.report.util.ReportLayoutContext.getSingleDataSource;
 
 @Component
-public class EntityTableRenderer implements ReportComponentRenderer {
+public class AlarmTableRenderer implements ReportComponentRenderer {
 
     @Override
-    public void render(ReportLayoutContext layoutCtx, ReportComponent component) {
-        EntityTableComponent entityTableComponent = (EntityTableComponent) component;
-        List<DataKey> dataKeys = getSingleDataSource(entityTableComponent).getDataKeys();
-        List<String> entityKeys = dataKeys.stream().map(DataKey::getName).toList();
-        List<String> columnsHeaders = dataKeys.stream().map(DataKey::getLabel).toList();
+    public void render(ReportLayoutContext layoutCtx, ReportComponent richTextComponent) {
+        AlarmTableComponent component = (AlarmTableComponent) richTextComponent;
+        List<DataKey> dataKeys = component.getAlarmSource().getDataKeys();
+        List<String> entityKeys = dataKeys.stream().map(DataKey::getName).collect(Collectors.toList());
+        List<String> columnsHeaders = dataKeys.stream().map(DataKey::getLabel).collect(Collectors.toList());
 
         addColumnHeader(layoutCtx, columnsHeaders);
         addTableDetailBand(layoutCtx, entityKeys);
@@ -75,7 +106,7 @@ public class EntityTableRenderer implements ReportComponentRenderer {
 
     @Override
     public ReportComponentType getType() {
-        return ReportComponentType.ENTITY_TABLE;
+        return ReportComponentType.ALARM_TABLE;
     }
 
 }
